20240727
1. Support mulit output in pipeline
2. Support debug Realse msvc for win